--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,6 @@ h1, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
-p, ol, table {
+p, ol, table, ul, form {
     font-family: 'Open Sans', sans-serif;
 }
